--- a/pack.yaml
+++ b/pack.yaml
@@ -1,7 +1,7 @@
 ---
 ref: webui
 name: webui
-description: "Tests for webui."
+description: "Webui pack for st2tests."
 version: 0.1.0
 author: st2-dev
 email: support@stackstorm.com
